--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Jordyn Marcellus",
   "license": "ISC",
   "homepage": "",
+  "babel" : {
+  	"presets" : ["es2015"]
+  },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "axis": "^0.6.1",
@@ -16,8 +19,6 @@
     "gulp": "^3.9.1",
     "gulp-concat-css": "^2.2.0",
     "gulp-cssnano": "^2.1.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
@@ -27,9 +28,12 @@
     "gulp-uglify": "^1.5.1",
     "jshint": "^2.8.0",
     "lost": "^6.7.2",
-    "nib": "^1.1.0",
     "postcss": "^5.0.19",
     "purify-css": "^1.0.17",
     "rupture": "^0.6.1"
+  },
+  "dependencies": {
+    "babel-core": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0"
   }
 }
